# ops_engine

./: .env.example  .gitignore  Order Notification Sample - Received- Wholesale JIT.csv  README.md  Stock Feed (SKU).csv  pyproject.toml
docs/gardiner-brothers-jit/: README.md  field-mapping.md  runbook.md
docs/gardiner-brothers-jit/samples/: order-file-template.csv  order-notification-despatched.csv  product-data.csv  stock-feed-barcode.csv
src/ops_engine/core/: brightpearl.py  sftp.py
src/ops_engine/integrations/gardiner_brothers_jit/: __main__.py  brightpearl_queries.py  config.py  discovery.py  inbound.py  notification_parser.py  order_builder.py  outbound.py  po_mapper.py  setup.py
tests/core/: test_brightpearl.py  test_sftp.py
tests/integrations/gardiner_brothers_jit/: test_brightpearl_queries.py  test_config.py  test_discovery.py  test_inbound.py  test_notification_parser.py  test_order_builder.py  test_outbound.py  test_po_mapper.py  test_setup.py
