[project]
name = "ops-engine"
version = "0.1.0"
description = "WBYS integration platform: Brightpearl <-> suppliers via SFTP."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ops_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
